# Coursework_6

./: README.md  pyproject.toml
blog/: forms.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: material_confirm_delete.html  material_detail.html  material_list.html
config/: settings.py  urls.py
mail_service/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mail_service/management/commands/: start_mailing_list.py
mail_service/managment/commands/: start_mailing_list.py
mail_service/migrations/: 0001_initial.py  0002_alter_mailingattempt_options.py  0002_customer_user_mailing_user_message_user.py  0003_alter_customer_comment_alter_customer_email_and_more.py  0003_alter_mailing_period_alter_mailing_status.py  0004_remove_mailing_date_time_mailing_customer_and_more.py
mail_service/templates/mail_service/: base.html  customer_confirm_delete.htm.html  customer_confirm_delete.html  customer_detail.html  customer_list.html  home_page.html  index.html  mail_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message.html  message_confirm_delete.html  message_detail.html  message_list.html
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  user_form.html
