[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["SergeyGladkovD <melcor2006@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pillow = "^10.3.0"
ipython = "^8.24.0"
black = "^24.4.2"
psycopg-binary = "^3.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
